Adciona lições em Java

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,5 @@
 /Projeto2_Aula3_22-08-2024_Adilson/nbproject/private/
 /ProjLoginSenha_Aula2_15-08-2024_Edu/nbproject/private/
 /ProjLoginSenha_Aula2_14-08-2024_Edu/nbproject/private/
+/WebAppProd/nbproject/private/
+/WebAppProd/build/
