Adociona lições em Java

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,5 @@
 /ProjLoginSenha_Aula2_14-08-2024_Edu/nbproject/private/
 /WebAppProd/nbproject/private/
 /WebAppProd/build/
+/ProjCalcSen/nbproject/private/
+/ProjCalcSen/build/
