Adciona lições em Java

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,5 @@
 /ProjCalcSen/nbproject/private/
 /ProjCalcSen/build/
 /2_ProjNotasAlunoBD_Aula_29-08-2024_Edu/build/
+/ProjNotasAlunoBD_2/nbproject/private/
+/3_ProjNotasAlunoBD_Aula_04-09-2024_Edu/nbproject/private/
