Adiciona lições em Java

--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,7 @@
 /2_ProjNotasAlunoBD_Aula_29-08-2024_Edu/build/
 /ProjNotasAlunoBD_2/nbproject/private/
 /3_ProjNotasAlunoBD_Aula_04-09-2024_Edu/nbproject/private/
+/Projeto3_Aula_30-08-2024_Adilson - Copia/nbproject/private/
+/Projeto3_Aula_30-08-2024_Adilson - Copia/build/
+/WebAppFunc/nbproject/private/
+/WebAppFunc/build/
