--- a/Projeto4_Aula_06-09-2024_Adilson/build.xml
+++ b/Projeto4_Aula_06-09-2024_Adilson/build.xml
@@ -7,8 +7,8 @@
 <!-- the Compile on Save feature is turned off for the project. -->
 <!-- You can turn off the Compile on Save (or Deploy on Save) setting -->
 <!-- in the project's Project Properties dialog box.-->
-<project name="WebAppFunc" default="default" basedir=".">
-    <description>Builds, tests, and runs the project WebAppFunc.</description>
+<project name="Projeto4_Aula_06-09-2024_Adilson" default="default" basedir=".">
+    <description>Builds, tests, and runs the project Projeto4_Aula_06-09-2024_Adilson.</description>
     <import file="nbproject/build-impl.xml"/>
     <!--
 
