--- a/Projeto4_Aula_06-09-2024_Adilson/nbproject/project.properties
+++ b/Projeto4_Aula_06-09-2024_Adilson/nbproject/project.properties
@@ -79,6 +79,6 @@ src.dir=${source.root}/java
 test.src.dir=test
 war.content.additional=
 war.ear.name=${war.name}
-war.name=WebAppFunc.war
+war.name=Projeto4_Aula_06-09-2024_Adilson.war
 web.docbase.dir=web
 webinf.dir=web/WEB-INF
