--- a/1_ProjLoginSenha_Aula_14-08-2024_Edu/build.xml
+++ b/1_ProjLoginSenha_Aula_14-08-2024_Edu/build.xml
@@ -7,8 +7,8 @@
 <!-- the Compile on Save feature is turned off for the project. -->
 <!-- You can turn off the Compile on Save (or Deploy on Save) setting -->
 <!-- in the project's Project Properties dialog box.-->
-<project name="ProjLoginSenha" default="default" basedir=".">
-    <description>Builds, tests, and runs the project ProjLoginSenha.</description>
+<project name="1_ProjLoginSenha_Aula_14-08-2024_Edu" default="default" basedir=".">
+    <description>Builds, tests, and runs the project 1_ProjLoginSenha_Aula_14-08-2024_Edu.</description>
     <import file="nbproject/build-impl.xml"/>
     <!--
 
@@ -58,7 +58,7 @@
 
     An example of overriding the target for project execution could look like this:
 
-        <target name="run" depends="ProjLoginSenha-impl.jar">
+        <target name="run" depends="1_ProjLoginSenha_Aula_14-08-2024_Edu-impl.jar">
             <exec dir="bin" executable="launcher.exe">
                 <arg file="${dist.jar}"/>
             </exec>
