--- a/1_ProjLoginSenha_Aula_14-08-2024_Edu/nbproject/project.properties
+++ b/1_ProjLoginSenha_Aula_14-08-2024_Edu/nbproject/project.properties
@@ -28,10 +28,10 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/ProjLoginSenha.jar
+dist.jar=${dist.dir}/1_ProjLoginSenha_Aula_14-08-2024_Edu.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/ProjLoginSenha
+dist.jlink.output=${dist.jlink.dir}/1_ProjLoginSenha_Aula_14-08-2024_Edu
 excludes=
 includes=**
 jar.compress=false
@@ -70,7 +70,7 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=ProjLoginSenha
+jlink.launcher.name=1_ProjLoginSenha_Aula_14-08-2024_Edu
 main.class=FormLogin
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
