--- a/3_ProjNotasAlunoBD_Aula_04-09-2024_Edu/nbproject/project.properties
+++ b/3_ProjNotasAlunoBD_Aula_04-09-2024_Edu/nbproject/project.properties
@@ -3,7 +3,7 @@ annotation.processing.enabled.in.editor=false
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-application.title=ProjNotasAlunoBD_2
+application.title=3_ProjNotasAlunoBD_Aula_04-09-2024_Edu
 application.vendor=pedro
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
@@ -29,10 +29,10 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/ProjNotasAlunoBD_2.jar
+dist.jar=${dist.dir}/3_ProjNotasAlunoBD_Aula_04-09-2024_Edu.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/ProjNotasAlunoBD_2
+dist.jlink.output=${dist.jlink.dir}/3_ProjNotasAlunoBD_Aula_04-09-2024_Edu
 endorsed.classpath=
 excludes=
 includes=**
@@ -73,7 +73,7 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=ProjNotasAlunoBD_2
+jlink.launcher.name=3_ProjNotasAlunoBD_Aula_04-09-2024_Edu
 main.class=FormNota
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
