Adiciona lições em Java

--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,5 @@
 /Projeto3_Aula_30-08-2024_Adilson - Copia/build/
 /WebAppFunc/nbproject/private/
 /WebAppFunc/build/
+/3_ProjNotasAlunoBD_Aula_04-09-2024_Edu/build/
+/Projeto5_Aula_12-09-2024_Adilson/nbproject/private/
