--- a/3_ProjNotasAlunoBD_Aula_04-09-2024_Edu/nbproject/project.properties
+++ b/3_ProjNotasAlunoBD_Aula_04-09-2024_Edu/nbproject/project.properties
@@ -35,6 +35,7 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/3_ProjNotasAlunoBD_Aula_04-09-2024_Edu
 endorsed.classpath=
 excludes=
+file.reference.mysql-connector-java-8.0.13.jar=C:\\Users\\pedro\\Downloads\\mysql-connector-java-8.0.13.jar
 includes=**
 jar.compress=false
 javac.classpath=\
