Adiciona lições em Java

--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,4 @@
 /WebAppFunc/build/
 /3_ProjNotasAlunoBD_Aula_04-09-2024_Edu/build/
 /Projeto5_Aula_12-09-2024_Adilson/nbproject/private/
+/Projeto5_Aula_12-09-2024_Adilson/build/
