Adiciona lições em Java

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,5 @@
 /3_ProjNotasAlunoBD_Aula_04-09-2024_Edu/build/
 /Projeto5_Aula_12-09-2024_Adilson/nbproject/private/
 /Projeto5_Aula_12-09-2024_Adilson/build/
+/Projeto6_Aula_26-09-2024_Adilson_BancoXPTO/nbproject/private/
+/Projeto6_Aula_26-09-2024_Adilson_BancoXPTO/build/
