Adiciona lições em Java

--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,7 @@
 /Projeto5_Aula_12-09-2024_Adilson/build/
 /Projeto6_Aula_26-09-2024_Adilson_BancoXPTO/nbproject/private/
 /Projeto6_Aula_26-09-2024_Adilson_BancoXPTO/build/
+/4_ProjFinan_Edu/nbproject/private/
+/4_ProjFinan_Edu/build/
+/Proj7_M1_99-Inscricao/nbproject/private/
+/Projeto7_M1_99-Inscricao/build/
