Adiciona lições em Java

--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,5 @@
 /4_ProjFinan_Edu/build/
 /Proj7_M1_99-Inscricao/nbproject/private/
 /Projeto7_M1_99-Inscricao/build/
+/Projeto8_Pesquisa/nbproject/private/
+/Projeto8_Pesquisa/build/
