Adiciona lições em Java

--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,5 @@
 /Projeto7_M1_99-Inscricao/build/
 /Projeto8_Pesquisa/nbproject/private/
 /Projeto8_Pesquisa/build/
+/Projeto9_Gradiente/nbproject/private/
+/Projeto9_Gradiente/build/
