Adiciona liçoes em Java

--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,5 @@
 /Projeto8_Pesquisa/build/
 /Projeto9_Gradiente/nbproject/private/
 /Projeto9_Gradiente/build/
+/Aula16-WebAppEmpresa/build/
+/Aula16-WebAppEmpresa/nbproject/private/
